# rust-wordle

./: Cargo.toml
src/: builtin_words.rs  check_word_not_tty.rs  config.json  main.rs  read_answer_word.rs  state.json  yaml.yml
